--- a/Engine/LUL_/LUL_.vcxproj.filters
+++ b/Engine/LUL_/LUL_.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="Source\Interfaces\IApplication.cpp">
       <Filter>Private\Interfaces</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Core\DataTypes.cpp">
+      <Filter>Private\Core</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\LUL_.h">
@@ -97,6 +100,9 @@
     </ClInclude>
     <ClInclude Include="Source\Interfaces\IApplication.hpp">
       <Filter>Public\Interfaces</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Core\DataTypes.hpp">
+      <Filter>Public\Core</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
