--- a/Engine/LUL_/LUL_.vcxproj.filters
+++ b/Engine/LUL_/LUL_.vcxproj.filters
@@ -72,11 +72,11 @@
     <ClCompile Include="Source\Primitives\EmptyRendererWindow.cpp">
       <Filter>Private\Primitives</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Interfaces\IUnknown.cpp">
+      <Filter>Private\Interfaces</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Source\LUL_.h">
-      <Filter>LUL_</Filter>
-    </ClInclude>
     <ClInclude Include="Source\Core\AppProperties.hpp">
       <Filter>Public\Core</Filter>
     </ClInclude>
@@ -103,6 +103,12 @@
     </ClInclude>
     <ClInclude Include="Source\Primitives\EmptyRendererWindow.hpp">
       <Filter>Public\Primitives</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\LUL_.h">
+      <Filter>LUL_</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Interfaces\IUnknown.hpp">
+      <Filter>Public\Interfaces</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
